--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="/styles/styles.css">
     <script src="https://kit.fontawesome.com/7db5b19640.js" crossorigin="anonymous"></script>
-    <title>React App</title>
+    <title>PinPics</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
